--- a/gameHanna.html
+++ b/gameHanna.html
@@ -14,7 +14,7 @@
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-	<script type="text/javascript" src="games/Hannagame/code.js"></script>
+	<script type="text/javascript" src="HannaGame/code.js"></script>
 
 
 </head>
@@ -48,7 +48,7 @@
 				            <li><a href="">Vlad Chernov</a></li>
 				          </ul>
 		            </li>
-		         	<li><a href="instructions.html">Ine</a>
+		         	<li><a href="ine.html">Ine</a>
 		         		<ul class="submenu">
 		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
 					        <li><a href="documentation.html">Documentacia ku hram</a></li>
