--- a/ine.html
+++ b/ine.html
@@ -54,7 +54,6 @@
 		          </ul>
 		  	</li>
 		  </nav>
-	
 
 		  	<li class="nav-item">
 		  	  	<a class="nav-link" href="autory.html">Autory</a>
@@ -65,13 +64,35 @@
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
 				<div class="text-in-div container">
-					<img alt="hra1" src="img/foto1.png" class="img-left"><p>Volám sa Hanna Hryharouskaya. Ja som som z Bieloruska, miesto Brest.Do 2011 som študovala na matematicko-ekonomickom gimnaziu Žukova G.K v Breste.V rokoch 2011-2015 som študovala v Brestskom štátnom polytechnickom kolize (od 2015. roka už Brestká štátna technická univerzita) na stavebnej fakulte. Teraz bývam v Bratislave a študujem na Slovenskej technickej univerzite na fakulte elektrotechniky a informatiky. </p><br><br>
-					<img alt="hra1" src="img/foto2.png" class="img-right"><p>Volám sa Tetiana Kukhelna. Som ukrajinka. Bývam v Bratislave a študujem na Slovenskej technickej univerzite na fakulte elektrotechniky a informatiky. Mám veľké plány do svojej budúcnosti. Túžba po poznaní a odpovede na moje otázky. Zmyslom života je byť šťastnou a robiť to, čo mi to prinesie.</p><br>
-					<q><i>A mind of moderate capacity which closely pursues one study must infallibly arrive at great proficiency in that study.
-								<br>― Mary Shelley, Frankenstein</i></q>
-					<br><br>			
-					<img alt="hra1" src="img/foto3.png" class="img-left"><p><br>Volám sa Patrik Kupčulák, som študentom Slovenskej technickej univerzity v Bratislave a študujem aplikovanú informatiku. Informatika ma baví už od detstva. Mojim koníčkom je vývoj hier a šport.<br></strong><br> </p><br><br>
-					<img alt="hra1" src="img/300x300.png" class="img-right"><p>Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc.</p>
+					<h6>O puzzle hrach</h6>
+					<br>
+					<img alt="hra1" src="img/puzzle2.JPG" class="img-left"><p>Puzzle, skladací obrázok (anglická skladačka) alebo mozaika (ruská verzia) je logická hra, v ktorej je potrebné vyrobiť mozaiku z mnohých kúskov kresby rôznych tvarov.Podľa psychológov zbieranie hádaniek prispieva k rozvoju obrazného a logického myslenia, dobrovoľnej pozornosti, vnímania, najmä rozlišovania jednotlivých prvkov farbou, tvarom, veľkosťou atď.; učí vás správne vnímať spojenie medzi časťou a celkom; rozvíja jemnú motoriku. V angličtine jediné slovo „puzzle“ znamená puzzle každého druhu, nie nevyhnutne puzzle. </p><br>
+					<a href="aboutgames.html"> -> Viac o puzzle hrach <-</a>
+					<hr>
+					<br>
+					<h6>Documentacia ku hram</h6>
+					<br>
+					<a href="aboutgames.html"> -> Viac o rozdelenie uloh v projecte <-</a>
+					<hr>
+					<br>
+					<h6>Pouzite linky</h6><br>
+					<p>figma.com<br>
+					https://www.w3schools.com<br>
+					pinterest.com<br>
+					http://jsfiddle.net/<br>
+					https://webgradients.com/<br>
+					https://konvajs.org/docs/sandbox/Animals_on_the_Beach_Game.html (skvelá ukážka + kód)<br>
+					https://color.adobe.com/create/color-wheel<br>
+					https://coolors.co/d7c0d0-f7c7db-f79ad3-c86fc9-8e518d<br>
+					https://htmlcolorcodes.com/color-picker/<br>
+					https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js<br>
+					https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js<br>
+					https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js<br>
+					https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css<br>
+
+
+					</p>
+					<hr>
 				</div>
 			</section>
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
