--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				            <li><a href="">Vlad Chernov</a></li>
 				          </ul>
 		            </li>
-		         	<li><a href="instructions.html">Ine</a>
+		         	<li><a href="ine.html">Ine</a>
 		         		<ul class="submenu">
 		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
 					        <li><a href="documentation.html">Documentacia ku hram</a></li>
