--- a/ultraland.html
+++ b/ultraland.html
@@ -42,7 +42,7 @@
 				            <li><a href="">Vlad Chernov</a></li>
 				        </ul>
 		            </li>
-		         	<li><a href="instructions.html">Ine</a>
+		         	<li><a href="ine.html">Ine</a>
 		         		<ul class="submenu">
 		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
 					        <li><a href="">Documentacia ku hram</a></li>
