--- a/aboutgames.html
+++ b/aboutgames.html
@@ -49,7 +49,7 @@
 		         	<li><a href="ine.html">Ine</a>
 		         		<ul class="submenu">
 		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
-					        <li><a href="documentation.html">Documentacia ku hram</a></li>
+					        <li><a href="documentation.html">Documentacia k projektu</a></li>
 				         </ul>
 		         	</li>
 		          </ul>
