--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/purecookie.css" async />
+	<script src="scripts/trojurovne_menu.js"></script>
 
 
 </head>
