--- a/documentation.html
+++ b/documentation.html
@@ -13,6 +13,7 @@
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/print.css" async />
 
 </head>
 <body>
@@ -63,7 +64,9 @@
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
+				<h4>Documentacia k projektu</h4><br><br>
 				<div class="text-in-div container">
+					<p>GITHUB -> <a href="https://github.com/TetianaKukhelna/spolicnyProjekt">WebTechProjectGitHub</a></p>
 					<table class="table-1">
 						    <tr>
 						        <td>Meno</td>
@@ -99,19 +102,19 @@
 					<br><br><br>
 					<h5>Wireframes</h5>
 					<p> Sme spolu vo <a href="https://www.figma.com/">figme</a> robili wireframe stranky, aby rychlejsie pochopit kostru, dizajn a kde budu nase web komponenty</p>
-					<p>Naiviac wireframov a nase inspiration collage na dizajn -> <a href="https://www.figma.com/file/MFEELiRwU47JSGAmGwAcNS/WebTechProject?node-id=0%3A1">WebTechProject</a> </p>
+					<p>Naiviac wireframov a nase inspiration collage na dizajn -> <a href="https://www.figma.com/file/MFEELiRwU47JSGAmGwAcNS/WebTechProject?node-id=0%3A1">WebTechProjectFigma</a> </p>
 					<br>
 					<div class="pictures" >
-					<img src="img/1.png" alt="Wireframe1" width="50%" >
-					<img src="img/2.png" alt="Wireframe1" width="40%" >
-					<br>
-					<img src="img/3.png" alt="Wireframe1" width="25%" >
-					<img src="img/4.png" alt="Wireframe1" width="50%">
+						<img src="img/1.png" alt="Wireframe1" width="50%" >
+						<img src="img/2.png" alt="Wireframe1" width="40%" >
+						<br>
+						<img src="img/3.png" alt="Wireframe1" width="25%" >
+						<img src="img/4.png" alt="Wireframe1" width="50%">
 					</div>
 
 				</div>
 			</section>
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_date_and_name"></div>
@@ -123,6 +126,9 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
+	  		<a href="#" class="action-print">Vytlačit stranku</a>
+	  		<hr>
+	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
 	  	</div>
