--- a/games.html
+++ b/games.html
@@ -11,6 +11,7 @@
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/print.css" >
 
 </head>
 <body>
@@ -62,6 +63,9 @@
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
+				<h4>Hry</h4>
+				<br>
+				<br>
 				<div class="row cen-div" id="games">
 					<a href="gameHanna.html"><img alt="hra1" src="img/HannaGame.JPG" class="href-img-game"><br>by Hanna Hryharouskaya</a>
 					<a href="ultraland.html"><img alt="hra1" src="img/ultraland/bg.png" class="href-img-game"><br>by Patrik Kupčulák</a>
@@ -70,7 +74,7 @@
 				</div>
 			</section>
 
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_date_and_name"></div>
@@ -82,6 +86,9 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
+	  		<a href="#" class="action-print">Vytlačit stranku</a>
+	  		<hr>
+	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
 	  	</div>
