--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/purecookie.css" async />
+	<link rel="stylesheet" type="text/css" href="css/print.css" async />
+
 
 
 </head>
@@ -33,7 +34,7 @@
 	</header>
 	<nav>
 		<ul class="nav justify-content-center">
-			<li class="nav-item">
+			<li class="nav-item" id="Domov">
 		    	<a class="nav-link" href="index.html">Domov</a>
 		  	</li>
 		  	<nav class="nav">
@@ -68,7 +69,6 @@
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section id="section" class="col-lg-9 col-md-12 col-sm-12">
-
 				<div class="typewriter">
 				  <h1><div id="nameday_date_and_name"></div></h1>
 				</div>
@@ -84,6 +84,9 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
+	  		<a href="#" class="action-print">Vytlačit stranku</a>
+	  		<hr>
+	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
 	  	</div>
