--- a/ine.html
+++ b/ine.html
@@ -13,6 +13,7 @@
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/print.css" async />
 
 </head>
 <body>
@@ -30,7 +31,7 @@
 	</header>
 	<nav>
 		<ul class="nav justify-content-center">
-			<li class="nav-item">
+			<li class="nav-item" >
 		    	<a class="nav-link" href="index.html">Domov</a>
 		  	</li>
 		  	<nav class="nav">
@@ -89,7 +90,7 @@
 					https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js<br>
 					https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js<br>
 					https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css<br>
-
+					https://www.apsolyamov.ru/files/html-table-generator.html<br>
 
 					</p>
 					<hr>
@@ -107,6 +108,9 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
+	  		<a href="#" class="action-print">Vytlačit stranku</a>
+	  		<hr>
+	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
 	  	</div>
