--- a/aboutgames.html
+++ b/aboutgames.html
@@ -14,6 +14,7 @@
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/print.css" async />
 
 </head>
 <body>
@@ -65,7 +66,10 @@
 	
 	<div>
 		<div class="row content margin-scroll" id="content">
-			<section  id="history-text" class="col-lg-9 col-md-12 col-sm-12">
+			<section  id="history-text" class="col-lg-9 col-md-12 col-sm-12 ">
+			<h4>O puzzle hrach</h4>
+				<br>
+				<br>
 				
 			 <img src="img/puzzle.jpg" class="img-story"><p>Puzzle, skladací obrázok (anglická skladačka) alebo mozaika (ruská verzia) je logická hra, v ktorej je potrebné vyrobiť mozaiku z mnohých kúskov kresby rôznych tvarov.Podľa psychológov zbieranie hádaniek prispieva k rozvoju obrazného a logického myslenia, dobrovoľnej pozornosti, vnímania, najmä rozlišovania jednotlivých prvkov farbou, tvarom, veľkosťou atď.; učí vás správne vnímať spojenie medzi časťou a celkom; rozvíja jemnú motoriku. V angličtine jediné slovo „puzzle“ znamená puzzle každého druhu, nie nevyhnutne puzzle.</p>
 			 <p>Podľa jednej verzie bol prvý, kto prišiel s hádankami okolo roku 1760, londýnsky rytec, kartograf a vydavateľ John Spilsbury. Vyrobil fascinujúce puzzle - uvidel čierno-bielu papierovú geografickú mapu, predtým nalepenú na drevenom podklade, pozdĺž línií štátnych hraníc. Bola navrhnutá nová mapa.<br> 
@@ -89,7 +93,7 @@
 				▛  V roku 2012 bola na počesť osláv Roka Nemecka v Rusku vytvorená najväčšia skladačka na svete (20 × 15 m). Toto je reprodukcia nemeckého maliara Albrechta Durera „Autoportrét v kožuchu“. Mozaika bola zhromaždená v Moskve, Jekaterinburgu, Novosibirsku, Petrohrade a ďalších mestách Ruska. Priemerná rýchlosť zberu maľby bola 3 hodiny. Skladačka pozostávala z 1023 prvkov, hmotnosť každého prvku bola asi 800 g, ich veľkosť bola 70 × 70 cm. [Zdroj neuvedený 3025 dní]</p>
 			</div>	
 			</section>
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_find"></div>
@@ -100,6 +104,9 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
+	  		<a href="#" class="action-print">Vytlačit stranku</a>
+	  		<hr>
+	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
 	  	</div>
