--- a/autory.html
+++ b/autory.html
@@ -13,6 +13,7 @@
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/print.css" async />
 
 </head>
 <body>
@@ -63,7 +64,10 @@
 	</nav>
 	<div>
 		<div class="row content margin-scroll" id="content">
-			<section class="col-lg-9 col-md-12 col-sm-12">
+			<section class="col-lg-9 col-md-12 col-sm-12 ">
+				<h4>Autory</h4>
+				<br>
+				<br>
 				<div class="text-in-div container">
 					<img alt="hra1" src="img/foto1.png" class="img-left"><p>Volám sa Hanna Hryharouskaya. Ja som som z Bieloruska, miesto Brest.Do 2011 som študovala na matematicko-ekonomickom gimnaziu Žukova G.K v Breste.V rokoch 2011-2015 som študovala v Brestskom štátnom polytechnickom kolize (od 2015. roka už Brestká štátna technická univerzita) na stavebnej fakulte. Teraz bývam v Bratislave a študujem na Slovenskej technickej univerzite na fakulte elektrotechniky a informatiky. </p><br><br>
 					<img alt="hra1" src="img/foto2.png" class="img-right"><p>Volám sa Tetiana Kukhelna. Som ukrajinka. Bývam v Bratislave a študujem na Slovenskej technickej univerzite na fakulte elektrotechniky a informatiky. Mám veľké plány do svojej budúcnosti. Túžba po poznaní a odpovede na moje otázky. Zmyslom života je byť šťastnou a robiť to, čo mi to prinesie.</p><br>
@@ -74,7 +78,7 @@
 					<img alt="hra1" src="img/300x300.png" class="img-right"><p>Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc.</p>
 				</div>
 			</section>
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_date_and_name"></div>
@@ -86,6 +90,9 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
+	  		<a href="#" class="action-print">Vytlačit stranku</a>
+	  		<hr>
+	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
 	  	</div>
