--- a/gameHanna.html
+++ b/gameHanna.html
@@ -15,6 +15,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 	<script type="text/javascript" src="HannaGame/code.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/print.css" async />
 
 
 </head>
@@ -71,7 +72,7 @@
 				<h6>  🌺 Ak sa hra nezačíta tak počkajte ešte trochu alebo obnovite web stránku  🌺 </h6>
 				<object class="object" data="HannaGame/indexGame.html" style=" width: 100%; height: 100% " ></object>
 			</section>
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_date_and_name"></div>
@@ -83,6 +84,9 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
+	  		<a href="#" class="action-print">Vytlačit stranku</a>
+	  		<hr>
+	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
 	  	</div>
