--- a/ultraland.html
+++ b/ultraland.html
@@ -12,6 +12,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 	<script src="https://unpkg.com/konva@7.2.2/konva.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/print.css" async />
 	
 </head>
 <body>
@@ -58,14 +59,14 @@
 	</nav>
 	<div>
 		<div class="row content margin-scroll" id="content">
-			<section class="col-lg-9 col-md-12 col-sm-12">
+			<section class="col-lg-9 col-md-12 col-sm-12 game2">
 				<h6> Ak hrá príliš veľká prosím zmenšíte veľkosť v prehadaci </h6>
 				<button id="start">Začať hru</button>
 				<button id="demo">Spusti demo</button>
 				<div id="timer"></div>
 				<div id="ultraland"></div>
 			</section>
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_find"></div>
@@ -76,6 +77,9 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
+	  		<a href="#" class="action-print">Vytlačit stranku</a>
+	  		<hr>
+	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
 	  	</div>
