--- a/gameHanna.html
+++ b/gameHanna.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/site.css">
+	<link rel="stylesheet" href="css/breadcrumbs.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -14,8 +15,7 @@
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-	<script type="text/javascript" src="HannaGame/code.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/print.css" async />
+	<script type="text/javascript" src="games/Hannagame/code.js"></script>
 
 
 </head>
@@ -25,12 +25,12 @@
 		  <div class="cube1"></div>
 		  <div class="cube2"></div>
 		</div>
-		<div> 
+		<div>
 			<h1>Skupinový projekt</h1>
 		</div>
 		<div style="width: 92px; height: 60px;">
-			
-		</div>  
+
+		</div>
 	</header>
 	<nav>
 		<ul class="nav justify-content-center">
@@ -45,34 +45,46 @@
 		            	<ul class="submenu">
 				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>
 				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
-				            <li><a href="hraTetiana.html">Tetiana Kukhelna</a></li>
+				            <li><a href="">Tetiana Kukhelna</a></li>
 				            <li><a href="">Vlad Chernov</a></li>
 				          </ul>
 		            </li>
-		         	<li><a href="ine.html">Ine</a>
+		         	<li><a href="instructions.html">Ine</a>
 		         		<ul class="submenu">
 		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
-					        <li><a href="documentation.html">Documentacia k projektu</a></li>
+					        <li><a href="documentation.html">Documentacia ku hram</a></li>
 				         </ul>
 		         	</li>
 		          </ul>
 		  	</li>
 		  </nav>
-	
+
 
 		  	<li class="nav-item">
 		  	  	<a class="nav-link" href="autory.html">Autory</a>
 		  	</li>
 		</ul>
 	</nav>
-	
+
+	<ul class="breadcrumbs">
+		<li class="breadcrumbsItem">
+			<a href="index.html" class="breadcrumbsLink">Domov</a>
+		</li>
+		<li class="breadcrumbsItem">
+			<a href="games.html" class="breadcrumbsLink">Hry</a>
+		</li>
+		<li class="breadcrumbsItem">
+			<a href="gameHanna.html" class="breadcrumbsLink breadcrumbsLinkActive">Hanna Hryharouskaya</a>
+		</li>
+	</ul>
+
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12" >
 				<h6>  🌺 Ak sa hra nezačíta tak počkajte ešte trochu alebo obnovite web stránku  🌺 </h6>
 				<object class="object" data="HannaGame/indexGame.html" style=" width: 100%; height: 100% " ></object>
 			</section>
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_date_and_name"></div>
@@ -84,9 +96,6 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
-	  		<a href="#" class="action-print">Vytlačit stranku</a>
-	  		<hr>
-	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
 	  	</div>
