--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/print.css" async />
+	<link rel="stylesheet" type="text/css" href="css/purecookie.css" async />
 	<script src="scripts/trojurovne_menu.js"></script>
-
 
 
 </head>
@@ -33,43 +32,45 @@
 			
 		</div>  
 	</header>
-	<nav>
-		<ul class="nav justify-content-center">
-			<li class="nav-item" id="Domov">
-		    	<a class="nav-link" href="index.html">Domov</a>
-		  	</li>
-		  	<nav class="nav">
-		  	<li class="nav-item" id="topmenu">
-		  	  	<a class="nav-link" href="games.html">Hry  ⮟</a>
-		  	  	<ul class="submenu">
-		            <li><a href="games.html">Hry</a>
-		            	<ul class="submenu">
-				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>
-				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
-				            <li><a href="hraTetiana.html">Tetiana Kukhelna</a></li>
-				            <li><a href="">Vlad Chernov</a></li>
-				          </ul>
-		            </li>
-		         	<li><a href="ine.html">Ine</a>
-		         		<ul class="submenu">
-		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
-					        <li><a href="documentation.html">Documentacia k projektu</a></li>
-				         </ul>
-		         	</li>
-		          </ul>
-		  	</li>
-		  </nav>
-	
+	<troj-menu></troj-menu>
+<!--	<nav>-->
+<!--		<ul class="nav justify-content-center">-->
+<!--			<li class="nav-item">-->
+<!--		    	<a class="nav-link" href="index.html">Domov</a>-->
+<!--		  	</li>-->
+<!--		  	<nav class="nav">-->
+<!--		  	<li class="nav-item" id="topmenu">-->
+<!--		  	  	<a class="nav-link" href="games.html">Hry  ⮟</a>-->
+<!--		  	  	<ul class="submenu">-->
+<!--		            <li><a href="games.html">Hry</a>-->
+<!--		            	<ul class="submenu">-->
+<!--				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>-->
+<!--				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>-->
+<!--				            <li><a href="hraTetiana.html">Tetiana Kukhelna</a></li>-->
+<!--				            <li><a href="">Vlad Chernov</a></li>-->
+<!--				          </ul>-->
+<!--		            </li>-->
+<!--		         	<li><a href="ine.html">Ine</a>-->
+<!--		         		<ul class="submenu">-->
+<!--		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>-->
+<!--					        <li><a href="documentation.html">Documentacia k projektu</a></li>-->
+<!--				         </ul>-->
+<!--		         	</li>-->
+<!--		          </ul>-->
+<!--		  	</li>-->
+<!--		  </nav>-->
+<!--	-->
 
-		  	<li class="nav-item">
-		  	  	<a class="nav-link" href="autory.html">Autory</a>
-		  	</li>
-		</ul>
-	</nav>
+<!--		  	<li class="nav-item">-->
+<!--		  	  	<a class="nav-link" href="autory.html">Autory</a>-->
+<!--		  	</li>-->
+<!--		</ul>-->
+<!--	</nav>-->
 	
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section id="section" class="col-lg-9 col-md-12 col-sm-12">
+
 				<div class="typewriter">
 				  <h1><div id="nameday_date_and_name"></div></h1>
 				</div>
@@ -85,9 +86,6 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
-	  		<a href="#" class="action-print">Vytlačit stranku</a>
-	  		<hr>
-	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
 	  	</div>
