--- a/ultraland.html
+++ b/ultraland.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/site.css">
+	<link rel="stylesheet" href="css/breadcrumbs.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -12,8 +13,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 	<script src="https://unpkg.com/konva@7.2.2/konva.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/print.css" async />
-	
+
 </head>
 <body>
 	<header>
@@ -21,10 +21,10 @@
 		  <div class="cube1"></div>
 		  <div class="cube2"></div>
 		</div>
-		<div> 
+		<div>
 			<h1>Skupinový projekt</h1>
 		</div>
-		<div style="width: 92px; height: 60px;"></div>  
+		<div style="width: 92px; height: 60px;"></div>
 	</header>
 	<nav>
 		<ul class="nav justify-content-center">
@@ -39,14 +39,14 @@
 		            	<ul class="submenu" >
 				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>
 				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
-				            <li><a href="hraTetiana.html">Tetiana Kukhelna</a></li>
+				            <li><a href="">Tetiana Kukhelna</a></li>
 				            <li><a href="">Vlad Chernov</a></li>
 				        </ul>
 		            </li>
-		         	<li><a href="ine.html">Ine</a>
+		         	<li><a href="instructions.html">Ine</a>
 		         		<ul class="submenu">
 		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
-					        <li><a href="documentation.html">Documentacia k projektu</a></li>
+					        <li><a href="">Documentacia ku hram</a></li>
 				        </ul>
 		         	</li>
 		         </ul>
@@ -57,16 +57,29 @@
 		  	</li>
 		</ul>
 	</nav>
+
+	<ul class="breadcrumbs">
+		<li class="breadcrumbsItem">
+			<a href="index.html" class="breadcrumbsLink">Domov</a>
+		</li>
+		<li class="breadcrumbsItem">
+			<a href="games.html" class="breadcrumbsLink">Hry</a>
+		</li>
+		<li class="breadcrumbsItem">
+			<a href="ultraland.html" class="breadcrumbsLink breadcrumbsLinkActive">Patrik Kupčulák</a>
+		</li>
+	</ul>
+
 	<div>
 		<div class="row content margin-scroll" id="content">
-			<section class="col-lg-9 col-md-12 col-sm-12 game2">
+			<section class="col-lg-9 col-md-12 col-sm-12">
 				<h6> Ak hrá príliš veľká prosím zmenšíte veľkosť v prehadaci </h6>
 				<button id="start">Začať hru</button>
 				<button id="demo">Spusti demo</button>
 				<div id="timer"></div>
 				<div id="ultraland"></div>
 			</section>
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_find"></div>
@@ -77,9 +90,6 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
-	  		<a href="#" class="action-print">Vytlačit stranku</a>
-	  		<hr>
-	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
 	  	</div>
