--- a/documentation.html
+++ b/documentation.html
@@ -7,13 +7,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/site.css">
+	<link rel="stylesheet" href="css/breadcrumbs.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/print.css" async />
 
 </head>
 <body>
@@ -22,12 +22,12 @@
 		  <div class="cube1"></div>
 		  <div class="cube2"></div>
 		</div>
-		<div> 
+		<div>
 			<h1>Skupinový projekt</h1>
 		</div>
 		<div style="width: 92px; height: 60px;">
-			
-		</div>  
+
+		</div>
 	</header>
 	<nav>
 		<ul class="nav justify-content-center">
@@ -42,14 +42,14 @@
 		            	<ul class="submenu">
 				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>
 				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
-				            <li><a href="hraTetiana.html">Tetiana Kukhelna</a></li>
+				            <li><a href="">Tetiana Kukhelna</a></li>
 				            <li><a href="">Vlad Chernov</a></li>
 				          </ul>
 		            </li>
-		         	<li><a href="ine.html">Ine</a>
+		         	<li><a href="instructions.html">Ine</a>
 		         		<ul class="submenu">
 		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
-					        <li><a href="documentation.html">Documentacia k projektu</a></li>
+					        <li><a href="documentation.html">Documentacia ku hram</a></li>
 				         </ul>
 		         	</li>
 		          </ul>
@@ -61,12 +61,26 @@
 		  	</li>
 		</ul>
 	</nav>
+
+	<ul class="breadcrumbs">
+		<li class="breadcrumbsItem">
+			<a href="index.html" class="breadcrumbsLink">Domov</a>
+		</li>
+		<li class="breadcrumbsItem">
+			<a href="games.html" class="breadcrumbsLink">Hry</a>
+		</li>
+		<li class="breadcrumbsItem">
+			<a href="instructions.html" class="breadcrumbsLink">Ine</a>
+		</li>
+		<li class="breadcrumbsItem">
+			<a href="documentation.html" class="breadcrumbsLink breadcrumbsLinkActive">Documentacia ku hram</a>
+		</li>
+	</ul>
+
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
-				<h4>Documentacia k projektu</h4><br><br>
 				<div class="text-in-div container">
-					<p>GITHUB -> <a href="https://github.com/TetianaKukhelna/spolicnyProjekt">WebTechProjectGitHub</a></p>
 					<table class="table-1">
 						    <tr>
 						        <td>Meno</td>
@@ -102,19 +116,19 @@
 					<br><br><br>
 					<h5>Wireframes</h5>
 					<p> Sme spolu vo <a href="https://www.figma.com/">figme</a> robili wireframe stranky, aby rychlejsie pochopit kostru, dizajn a kde budu nase web komponenty</p>
-					<p>Naiviac wireframov a nase inspiration collage na dizajn -> <a href="https://www.figma.com/file/MFEELiRwU47JSGAmGwAcNS/WebTechProject?node-id=0%3A1">WebTechProjectFigma</a> </p>
+					<p>Naiviac wireframov a nase inspiration collage na dizajn -> <a href="https://www.figma.com/file/MFEELiRwU47JSGAmGwAcNS/WebTechProject?node-id=0%3A1">WebTechProject</a> </p>
 					<br>
 					<div class="pictures" >
-						<img src="img/1.png" alt="Wireframe1" width="50%" >
-						<img src="img/2.png" alt="Wireframe1" width="40%" >
-						<br>
-						<img src="img/3.png" alt="Wireframe1" width="25%" >
-						<img src="img/4.png" alt="Wireframe1" width="50%">
+					<img src="img/1.png" alt="Wireframe1" width="50%" >
+					<img src="img/2.png" alt="Wireframe1" width="40%" >
+					<br>
+					<img src="img/3.png" alt="Wireframe1" width="25%" >
+					<img src="img/4.png" alt="Wireframe1" width="50%">
 					</div>
 
 				</div>
 			</section>
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_date_and_name"></div>
@@ -126,9 +140,6 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
-	  		<a href="#" class="action-print">Vytlačit stranku</a>
-	  		<hr>
-	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
 	  	</div>
