--- a/games.html
+++ b/games.html
@@ -5,13 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/site.css">
+	<link rel="stylesheet" href="css/breadcrumbs.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/print.css" >
 
 </head>
 <body>
@@ -20,12 +20,12 @@
 		  <div class="cube1"></div>
 		  <div class="cube2"></div>
 		</div>
-		<div> 
+		<div>
 			<h1>Skupinový projekt</h1>
 		</div>
 		<div style="width: 92px; height: 60px;">
-			
-		</div>  
+
+		</div>
 	</header>
 	<nav>
 		<ul class="nav justify-content-center">
@@ -44,37 +44,44 @@
 				            <li><a href="">Vlad Chernov</a></li>
 				          </ul>
 		            </li>
-		         	<li><a href="ine.html">Ine</a>
+		         	<li><a href="instructions.html">Ine</a>
 		         		<ul class="submenu">
 		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
-					        <li><a href="documentation.html">Documentacia k projektu</a></li>
+					        <li><a href="documentation.html">Documentacia ku hram</a></li>
 				         </ul>
 		         	</li>
 		          </ul>
 		  	</li>
 		  </nav>
-	
+
 
 		  	<li class="nav-item">
 		  	  	<a class="nav-link" href="autory.html">Autory</a>
 		  	</li>
 		</ul>
 	</nav>
+
+	<ul class="breadcrumbs">
+		<li class="breadcrumbsItem">
+			<a href="index.html" class="breadcrumbsLink">Domov</a>
+		</li>
+		<li class="breadcrumbsItem">
+			<a href="games.html" class="breadcrumbsLink breadcrumbsLinkActive">Hry</a>
+		</li>
+	</ul>
+
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
-				<h4>Hry</h4>
-				<br>
-				<br>
 				<div class="row cen-div" id="games">
 					<a href="gameHanna.html"><img alt="hra1" src="img/HannaGame.JPG" class="href-img-game"><br>by Hanna Hryharouskaya</a>
 					<a href="ultraland.html"><img alt="hra1" src="img/ultraland/bg.png" class="href-img-game"><br>by Patrik Kupčulák</a>
-					<a href="hraTetiana.html"><img alt="hra1" src="img/obrazokHry.png" class="href-img-game"><br>by Tetiana Kukhelna</a>
+					<a href="games/hra.html"><img alt="hra1" src="img/obrazokHry.png" class="href-img-game"><br>by Tetiana Kukhelna</a>
 					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Vlad Chernov</a>
 				</div>
 			</section>
 
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_date_and_name"></div>
@@ -86,9 +93,6 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
-	  		<a href="#" class="action-print">Vytlačit stranku</a>
-	  		<hr>
-	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
 	  	</div>
