--- a/gameHanna.html
+++ b/gameHanna.html
@@ -32,39 +32,40 @@
 
 		</div>
 	</header>
-	<nav>
-		<ul class="nav justify-content-center">
-			<li class="nav-item">
-		    	<a class="nav-link" href="index.html">Domov</a>
-		  	</li>
-		  	<nav class="nav">
-		  	<li class="nav-item" id="topmenu">
-		  	  	<a class="nav-link" href="games.html">Hry  ⮟</a>
-		  	  	<ul class="submenu">
-		            <li><a href="games.html">Hry</a>
-		            	<ul class="submenu">
-				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>
-				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
-				            <li><a href="">Tetiana Kukhelna</a></li>
-				            <li><a href="">Vlad Chernov</a></li>
-				          </ul>
-		            </li>
-		         	<li><a href="instructions.html">Ine</a>
-		         		<ul class="submenu">
-		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
-					        <li><a href="documentation.html">Documentacia ku hram</a></li>
-				         </ul>
-		         	</li>
-		          </ul>
-		  	</li>
-		  </nav>
+	<troj-menu></troj-menu>
+<!--	<nav>-->
+<!--		<ul class="nav justify-content-center">-->
+<!--			<li class="nav-item">-->
+<!--		    	<a class="nav-link" href="index.html">Domov</a>-->
+<!--		  	</li>-->
+<!--		  	<nav class="nav">-->
+<!--		  	<li class="nav-item" id="topmenu">-->
+<!--		  	  	<a class="nav-link" href="games.html">Hry  ⮟</a>-->
+<!--		  	  	<ul class="submenu">-->
+<!--		            <li><a href="games.html">Hry</a>-->
+<!--		            	<ul class="submenu">-->
+<!--				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>-->
+<!--				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>-->
+<!--				            <li><a href="">Tetiana Kukhelna</a></li>-->
+<!--				            <li><a href="">Vlad Chernov</a></li>-->
+<!--				          </ul>-->
+<!--		            </li>-->
+<!--		         	<li><a href="instructions.html">Ine</a>-->
+<!--		         		<ul class="submenu">-->
+<!--		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>-->
+<!--					        <li><a href="documentation.html">Documentacia ku hram</a></li>-->
+<!--				         </ul>-->
+<!--		         	</li>-->
+<!--		          </ul>-->
+<!--		  	</li>-->
+<!--		  </nav>-->
 
 
-		  	<li class="nav-item">
-		  	  	<a class="nav-link" href="autory.html">Autory</a>
-		  	</li>
-		</ul>
-	</nav>
+<!--		  	<li class="nav-item">-->
+<!--		  	  	<a class="nav-link" href="autory.html">Autory</a>-->
+<!--		  	</li>-->
+<!--		</ul>-->
+<!--	</nav>-->
 
 	<ul class="breadcrumbs">
 		<li class="breadcrumbsItem">
