pridala fungujuci trojurovneve menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/purecookie.css" async />
+	<link rel="stylesheet" type="text/css" href="css/print.css" async />
 	<script src="scripts/trojurovne_menu.js"></script>
 
 
@@ -33,39 +33,6 @@
 		</div>  
 	</header>
 	<troj-menu></troj-menu>
-<!--	<nav>-->
-<!--		<ul class="nav justify-content-center">-->
-<!--			<li class="nav-item">-->
-<!--		    	<a class="nav-link" href="index.html">Domov</a>-->
-<!--		  	</li>-->
-<!--		  	<nav class="nav">-->
-<!--		  	<li class="nav-item" id="topmenu">-->
-<!--		  	  	<a class="nav-link" href="games.html">Hry  ⮟</a>-->
-<!--		  	  	<ul class="submenu">-->
-<!--		            <li><a href="games.html">Hry</a>-->
-<!--		            	<ul class="submenu">-->
-<!--				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>-->
-<!--				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>-->
-<!--				            <li><a href="hraTetiana.html">Tetiana Kukhelna</a></li>-->
-<!--				            <li><a href="">Vlad Chernov</a></li>-->
-<!--				          </ul>-->
-<!--		            </li>-->
-<!--		         	<li><a href="ine.html">Ine</a>-->
-<!--		         		<ul class="submenu">-->
-<!--		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>-->
-<!--					        <li><a href="documentation.html">Documentacia k projektu</a></li>-->
-<!--				         </ul>-->
-<!--		         	</li>-->
-<!--		          </ul>-->
-<!--		  	</li>-->
-<!--		  </nav>-->
-<!--	-->
-
-<!--		  	<li class="nav-item">-->
-<!--		  	  	<a class="nav-link" href="autory.html">Autory</a>-->
-<!--		  	</li>-->
-<!--		</ul>-->
-<!--	</nav>-->
 	
 	<div>
 		<div class="row content margin-scroll" id="content">
