--- a/ine.html
+++ b/ine.html
@@ -29,38 +29,7 @@
 			
 		</div>  
 	</header>
-	<nav>
-		<ul class="nav justify-content-center">
-			<li class="nav-item" >
-		    	<a class="nav-link" href="index.html">Domov</a>
-		  	</li>
-		  	<nav class="nav">
-		  	<li class="nav-item" id="topmenu">
-		  	  	<a class="nav-link" href="games.html">Hry  ⮟</a>
-		  	  	<ul class="submenu">
-		            <li><a href="games.html">Hry</a>
-		            	<ul class="submenu">
-				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>
-				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
-				            <li><a href="hraTetiana.html">Tetiana Kukhelna</a></li>
-				            <li><a href="">Vlad Chernov</a></li>
-				          </ul>
-		            </li>
-		         	<li><a href="ine.html">Ine</a>
-		         		<ul class="submenu">
-		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
-					        <li><a href="documentation.html">Documentacia k projektu</a></li>
-				         </ul>
-		         	</li>
-		          </ul>
-		  	</li>
-		  </nav>
-
-		  	<li class="nav-item">
-		  	  	<a class="nav-link" href="autory.html">Autory</a>
-		  	</li>
-		</ul>
-	</nav>
+	<troj-menu></troj-menu>
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
