--- a/aboutgames.html
+++ b/aboutgames.html
@@ -40,7 +40,7 @@
 			<a href="games.html" class="breadcrumbsLink">Hry</a>
 		</li>
 		<li class="breadcrumbsItem">
-			<a href="instructions.html" class="breadcrumbsLink">Ine</a>
+			<a href="ine.html" class="breadcrumbsLink">Ine</a>
 		</li>
 		<li class="breadcrumbsItem">
 			<a href="aboutgames.html" class="breadcrumbsLink breadcrumbsLinkActive">O puzzle hrach</a>
