d fix troj menu , funguje na vsetkych, zabudla to zapnut na kazdej

--- a/gameHanna.html
+++ b/gameHanna.html
@@ -16,6 +16,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 	<script type="text/javascript" src="games/Hannagame/code.js"></script>
+	<script src="scripts/trojurovne_menu.js"></script>
 
 
 </head>
