--- a/ultraland.html
+++ b/ultraland.html
@@ -13,6 +13,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 	<script src="https://unpkg.com/konva@7.2.2/konva.min.js"></script>
+	<script src="scripts/trojurovne_menu.js"></script>
 
 </head>
 <body>
