--- a/documentation.html
+++ b/documentation.html
@@ -14,6 +14,7 @@
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+	<script src="scripts/trojurovne_menu.js"></script>
 
 </head>
 <body>
