add v dokumentacii info a teg v autory

--- a/documentation.html
+++ b/documentation.html
@@ -72,9 +72,9 @@
 						    </tr>
 						    <tr>
 						        <td><span style="font-family: vt323, monospace; text-align: center;">Tetiana kukhelna</span></td>
-						        <td></td>
-						        <td></td>
-						        <td></td>
+						        <td>web komponent trojurovneho menu</td>
+						        <td>generovanie menu v troch urovniach pre kazdu stranku. </td>
+						        <td>xkukhelna@stuba.sk</td>
 						    </tr>
 						    <tr>
 						        <td><span style="font-family: vt323, monospace; text-align: center;">Vlad chernov</span></td>
