--- a/documentation.html
+++ b/documentation.html
@@ -83,10 +83,13 @@
 						        <td></td>
 						    </tr>
 					</table>
-					<br><br><br>
+					<br><br>
+					<p>🌺 Project na GITHUB -><a href="https://github.com/TetianaKukhelna/spolicnyProjekt"> WebTechProjectGit</a> 🌺</p>
+					<br>
+					<br>
 					<h5>Wireframes</h5>
 					<p> Sme spolu vo <a href="https://www.figma.com/">figme</a> robili wireframe stranky, aby rychlejsie pochopit kostru, dizajn a kde budu nase web komponenty</p>
-					<p>Naiviac wireframov a nase inspiration collage na dizajn -> <a href="https://www.figma.com/file/MFEELiRwU47JSGAmGwAcNS/WebTechProject?node-id=0%3A1">WebTechProject</a> </p>
+					<p>Naiviac wireframov a nase inspiration collage na dizajn -> <a href="https://www.figma.com/file/MFEELiRwU47JSGAmGwAcNS/WebTechProject?node-id=0%3A1">WebTechProjectFigma</a> </p>
 					<br>
 					<div class="pictures" >
 					<img src="img/1.png" alt="Wireframe1" width="50%" >
