add count visitor and file for breadcrumbs

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 				<names-day></names-day>
 				<div id="nameday_find"></div>
 				<br>
+				<br>
+				<br>
+				<div class="text-center counter"></div>
 			</aside>
 		</div>
 	</div>
