add breadcrumbs on pages documentation.html hraTetiana.html and ine.html

--- a/documentation.html
+++ b/documentation.html
@@ -40,7 +40,7 @@
 			<a href="games.html" class="breadcrumbsLink">Hry</a>
 		</li>
 		<li class="breadcrumbsItem">
-			<a href="instructions.html" class="breadcrumbsLink">Ine</a>
+			<a href="ine.html" class="breadcrumbsLink">Ine</a>
 		</li>
 		<li class="breadcrumbsItem">
 			<a href="documentation.html" class="breadcrumbsLink breadcrumbsLinkActive">Documentacia ku hram</a>
