--- a/hraTetiana.html
+++ b/hraTetiana.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/site.css">
+	<link rel="stylesheet" href="css/breadcrumbs.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -33,6 +34,18 @@
 		</div>
 	</header>
 	<troj-menu></troj-menu>
+
+	<ul class="breadcrumbs">
+		<li class="breadcrumbsItem">
+			<a href="index.html" class="breadcrumbsLink">Domov</a>
+		</li>
+		<li class="breadcrumbsItem">
+			<a href="games.html" class="breadcrumbsLink">Hry</a>
+		</li>
+		<li class="breadcrumbsItem">
+			<a href="hraTetiana.html" class="breadcrumbsLink breadcrumbsLinkActive">Tetiana Kukhelna</a>
+		</li>
+	</ul>
 
 	<div>
 		<div class="row content margin-scroll" id="content">
