--- a/autory.html
+++ b/autory.html
@@ -54,7 +54,7 @@
 								<br>― Mary Shelley, Frankenstein</i></q>
 					<br><br>			
 					<img alt="hra1" src="img/foto3.png" class="img-left"><p><br>Volám sa Patrik Kupčulák, som študentom Slovenskej technickej univerzity v Bratislave a študujem aplikovanú informatiku. Informatika ma baví už od detstva. Mojim koníčkom je vývoj hier a šport.<br></strong><br> </p><br><br>
-					<img alt="hra1" src="img/300x300.png" class="img-right"><p>Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc.</p>
+					<img alt="hra1" src="img/foto4.png" class="img-right"><p>Volám sa Vlad Chernov, študujem na STU v Bratislave (API). Milujem exaktné vedy ako fyzika a matematika. Baví ma programovanie. A taktiež mám rád športové hry.</p>
 				</div>
 			</section>
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
